--- a/index.html
+++ b/index.html
@@ -7,96 +7,136 @@
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
   <style>
-    body { font-family:'Pretendard',sans-serif; color:#111; margin:0; background:#fafafa; }
-    section { padding:100px 20px; }
-    .container { max-width:1200px; margin:0 auto; }
-
-    h1 { font-size:3rem; font-weight:900; margin-bottom:20px; line-height:1.3; }
-    h2 { font-size:2rem; font-weight:800; margin-bottom:50px; text-align:center; }
-    p { font-size:1.1rem; line-height:1.7; color:#444; }
-
-    /* Buttons */
-    .btn { display:inline-block; padding:14px 28px; border-radius:12px; font-weight:600; cursor:pointer; text-decoration:none; transition:.2s; }
-    .btn.primary { background:#00C896; color:#fff; margin:8px; }
-    .btn.primary:hover { background:#00a97a; }
-    .btn.secondary { border:2px solid #00C896; color:#00C896; margin:8px; background:#fff; }
-    .btn.secondary:hover { background:#f3fffb; }
+    :root{
+      --ink:#111;
+      --sub:#444;
+      --muted:#777;
+      --line:#eaeaea;
+      --bg:#fafafa;
+      --card:#ffffff;
+      --brand:#00C896;
+    }
+    /* Global */
+    html,body{background:var(--bg); color:var(--ink); font-family:'Pretendard',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; margin:0}
+    section{padding:88px 20px}
+    .container{max-width:1200px; margin:0 auto}
+    h1{font-size:3rem; line-height:1.2; letter-spacing:-.02em; margin:0 0 14px; font-weight:900}
+    h2{font-size:2rem; letter-spacing:-.01em; margin:0 0 34px; font-weight:800; text-align:center}
+    p{font-size:1.1rem; line-height:1.7; color:var(--sub); margin:0}
+    .btn{display:inline-block; padding:14px 24px; border-radius:12px; font-weight:700; text-decoration:none; transition:.2s}
+    .btn.primary{background:var(--brand); color:#fff}
+    .btn.primary:hover{filter:saturate(110%) brightness(.98)}
+    .btn.secondary{border:2px solid var(--brand); color:var(--brand); background:#fff}
+    .btn.secondary:hover{background:#f4fffb}
+    .badge{display:inline-flex; align-items:center; gap:8px; padding:8px 12px; border-radius:999px; font-size:.9rem; font-weight:700; background:#e8fff6; color:#046e54; border:1px solid #bff3e1}
 
     /* Hero */
-    .hero { text-align:center; padding:140px 20px; background:#fff; }
-    .hero p { margin-bottom:24px; font-size:1.2rem; }
-    .beta { background:#e8fff6; color:#00664c; border:1px solid #baf2dc; border-radius:12px; padding:14px 20px; display:inline-block; font-size:.95rem; margin-top:24px; }
+    .hero{background:linear-gradient(135deg,#fff 0%,#f6fbff 50%,#ffffff 100%); padding:110px 20px}
+    .hero-grid{display:grid; grid-template-columns:1.2fr .8fr; gap:40px; align-items:center}
+    .hero-copy p{margin-bottom:18px}
+    .hero-cta{margin-top:22px; display:flex; gap:12px; flex-wrap:wrap}
+    .hero-art{
+      height:320px; border-radius:20px; background:#fff; border:1px solid var(--line);
+      display:grid; place-items:center; position:relative; overflow:hidden; box-shadow:0 8px 24px rgba(0,0,0,.06)
+    }
+    .hero-art::before{
+      content:""; position:absolute; inset:-40% -20% auto -20%;
+      height:200%; transform:rotate(8deg);
+      background:repeating-linear-gradient(45deg, #f7fffb 0 16px, #ffffff 16px 32px);
+      opacity:.75
+    }
+    .hero-paw{
+      position:relative; z-index:1; font-size:84px; filter:drop-shadow(0 6px 14px rgba(0,0,0,.08))
+    }
+    .hero-kicker{margin-top:10px; font-size:.95rem; color:var(--muted)}
 
-    /* Impact */
-    .impact { background:#f9fafb; }
-    .impact-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:24px; }
-    .impact-card { background:#fff; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.05); padding:32px; font-size:1.2rem; font-weight:700; transition:.2s; }
-    .impact-card:hover { transform:translateY(-4px); box-shadow:0 8px 18px rgba(0,0,0,0.08); }
+    /* Highlights (3~4 카드로 가로 공간 활용) */
+    .highlights{background:#f9fafb}
+    .hl-grid{display:grid; grid-template-columns:repeat(12,1fr); gap:20px}
+    .card{
+      background:var(--card); border:1px solid var(--line); border-radius:16px; padding:28px;
+      box-shadow:0 6px 18px rgba(0,0,0,.04); transition:.2s
+    }
+    .card:hover{transform:translateY(-4px); box-shadow:0 10px 24px rgba(0,0,0,.06)}
+    .hl-card{grid-column:span 4; text-align:center; font-weight:800; font-size:1.15rem; line-height:1.5}
+    .hl-card small{display:block; margin-top:8px; font-weight:600; color:var(--sub); font-size:.95rem}
 
-    /* Trust */
-    .trust { background:#fff; }
-    .trust-layout { display:grid; grid-template-columns:2fr 1fr; gap:40px; align-items:start; }
-    .trust-points { display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:24px; }
-    .trust-card { background:#fafafa; border-radius:16px; padding:32px; text-align:center; box-shadow:0 4px 10px rgba(0,0,0,0.04); }
-    .trust-card .icon { font-size:2rem; margin-bottom:14px; }
-    .trust-card h3 { font-size:1.2rem; font-weight:700; margin-bottom:10px; }
-    .trust-card p { font-size:.95rem; color:#555; }
-    .stats { background:#f9fafb; border-radius:16px; padding:40px; text-align:center; box-shadow:0 4px 10px rgba(0,0,0,0.04); }
-    .stats h3 { font-size:1.3rem; margin-bottom:20px; }
-    .stats strong { font-size:1.5rem; font-weight:800; display:block; margin-bottom:10px; color:#00C896; }
-    .stats .note { font-size:.9rem; color:#666; line-height:1.6; }
+    /* Trust (왼쪽 3카드 / 오른쪽 Beta 상태박스) */
+    .trust-grid{display:grid; grid-template-columns:2fr 1fr; gap:28px; align-items:stretch}
+    .trust-cards{display:grid; grid-template-columns:repeat(3,1fr); gap:20px}
+    .trust-card{text-align:center}
+    .trust-card .icon{font-size:1.8rem; margin-bottom:10px}
+    .stats{display:flex; flex-direction:column; justify-content:center; align-items:center; gap:10px}
+    .stats h3{margin:0; font-size:1.2rem; font-weight:800}
+    .stats strong{font-size:1.2rem; color:var(--brand)}
+    .stats .note{font-size:.95rem; color:var(--muted); text-align:center}
 
-    /* Projects */
-    .projects { background:#fafafa; }
-    .projects h2 { margin-bottom:30px; }
-    .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:24px; }
-    .card { background:#fff; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.05); padding:18px; display:flex; flex-direction:column; gap:10px; transition:.2s; }
-    .card:hover { transform:translateY(-4px); box-shadow:0 8px 18px rgba(0,0,0,0.08); }
-    .card img { width:100%; height:180px; object-fit:cover; border-radius:12px; }
-    .card h3 { font-size:1.1rem; font-weight:700; margin:6px 0; }
-    .muted { color:#777; font-size:.9rem; }
+    /* Projects (원본 그리드 유지, 시각 보정만) */
+    .projects h2{margin-bottom:22px}
+    .grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:22px}
+    .card.project{padding:16px}
+    .card.project img{width:100%; height:180px; object-fit:cover; border-radius:12px}
+    .card.project h3{font-size:1.05rem; margin:8px 0 4px}
+    .muted{color:var(--muted); font-size:.9rem}
 
-    /* Closing */
-    .closing { background:#fff; }
-    .closing-layout { display:grid; grid-template-columns:1fr 1fr; gap:50px; align-items:center; }
-    .closing strong { font-size:1.4rem; font-weight:800; display:block; margin-bottom:20px; line-height:1.5; }
-    .example-box { background:#f9fafb; border-radius:16px; padding:28px; font-size:.95rem; color:#555; line-height:1.6; box-shadow:0 4px 10px rgba(0,0,0,0.04); }
-    @media(max-width:768px){
-      .trust-layout { grid-template-columns:1fr; }
-      .closing-layout { grid-template-columns:1fr; }
+    /* Closing (2컬럼: 좌 선언 / 우 예시) */
+    .closing{background:#fff}
+    .closing-grid{display:grid; grid-template-columns:1fr 1fr; gap:32px; align-items:center}
+    .closing strong{display:block; font-size:1.4rem; font-weight:900; line-height:1.5}
+    .example{font-size:.98rem; color:var(--sub)}
+    .example.card{padding:24px}
+
+    /* Responsive */
+    @media (max-width:1024px){
+      .hero-grid{grid-template-columns:1fr; gap:24px}
+      .trust-grid{grid-template-columns:1fr; gap:22px}
+      .trust-cards{grid-template-columns:1fr 1fr}
+    }
+    @media (max-width:720px){
+      section{padding:70px 16px}
+      h1{font-size:2.2rem}
+      h2{font-size:1.6rem}
+      .hl-card{grid-column:span 12}
+      .trust-cards{grid-template-columns:1fr}
+      .closing-grid{grid-template-columns:1fr}
     }
   </style>
 </head>
 <body>
+  <!-- header include 유지 -->
   <div data-include="header"></div>
 
   <!-- Hero -->
   <section class="hero">
-    <div class="container">
-      <h1>후원, 왜 이렇게 복잡했을까요?</h1>
-      <p>
-        Project.PAW는 <b>구조자(개인) ↔ 후원자(개인)</b> 바로 연결.<br/>
-        단순하고 투명한 방식, 이제 시작합니다.
-      </p>
-      <div class="beta">
-        🐾 Beta 서비스 중<br/>
-        지금은 카톡방에서 모금이 진행돼요.<br/>
-        결제(PG) 붙으면 더 매끄럽게 이어집니다.
+    <div class="container hero-grid">
+      <div class="hero-copy">
+        <span class="badge">🐾 Beta 서비스 중 · 카톡방 모금 운영</span>
+        <h1>후원, 왜 이렇게 복잡했을까요?</h1>
+        <p>
+          Project.PAW는 <b>구조자(개인) ↔ 후원자(개인)</b>을 바로 연결합니다.<br/>
+          단순하고 투명한 방식, 이제 시작합니다.
+        </p>
+        <div class="hero-cta">
+          <a href="project_list.html" class="btn primary">지금 구조자 만나보기</a>
+          <a href="create.html" class="btn secondary">등록하기</a>
+        </div>
+        <div class="hero-kicker">결제(PG) 연동 준비 중 — 연결 경험은 지금도 매끄럽게.</div>
       </div>
-      <div style="margin-top:30px">
-        <a href="project_list.html" class="btn primary">🐾 지금 구조자 만나보기</a>
-        <a href="create.html" class="btn secondary">등록하기</a>
+      <div class="hero-art">
+        <div class="hero-paw">🐾</div>
       </div>
     </div>
   </section>
 
-  <!-- Impact -->
-  <section class="impact">
+  <!-- Highlights -->
+  <section class="highlights">
     <div class="container">
-      <div class="impact-grid">
-        <div class="impact-card">🐾 돕고 싶은 마음,<br/>연결로 실현</div>
-        <div class="impact-card">💡 망설임 대신,<br/>행동으로</div>
-        <div class="impact-card">❤️ 돈보다 중요한 건<br/>신뢰와 연결</div>
+      <h2>우리가 해결하는 것</h2>
+      <div class="hl-grid">
+        <div class="card hl-card">돕고 싶은 마음,<br/>연결로 실현<small>개인 간 바로 연결되는 후원</small></div>
+        <div class="card hl-card">망설임 대신,<br/>행동으로<small>즉시 참여 가능한 구조 흐름</small></div>
+        <div class="card hl-card">돈보다 중요한 건<br/>신뢰와 연결<small>사진·영수증 기반의 투명성</small></div>
+        <div class="card hl-card">구조자 부담 30%<br/>원칙<small>도덕적 해이 방지, 책임 분담</small></div>
       </div>
     </div>
   </section>
@@ -104,35 +144,35 @@
   <!-- Trust -->
   <section class="trust">
     <div class="container">
-      <h2>Project.PAW의 신뢰 설계</h2>
-      <div class="trust-layout">
-        <div class="trust-points">
-          <div class="trust-card">
+      <h2>신뢰 설계</h2>
+      <div class="trust-grid">
+        <div class="trust-cards">
+          <div class="card trust-card">
             <div class="icon">🔒</div>
-            <h3>구조자 부담금 30%</h3>
+            <div class="h3" style="font-weight:800; margin-bottom:6px">구조자 30% 부담</div>
             <p>책임을 함께 나누는 원칙입니다.</p>
           </div>
-          <div class="trust-card">
+          <div class="card trust-card">
             <div class="icon">🏥</div>
-            <h3>Direct Payment 준비</h3>
+            <div class="h3" style="font-weight:800; margin-bottom:6px">Direct 결제 준비</div>
             <p>곧 병원으로 바로 결제됩니다.</p>
           </div>
-          <div class="trust-card">
+          <div class="card trust-card">
             <div class="icon">🤝</div>
-            <h3>기부금 100% 전달</h3>
+            <div class="h3" style="font-weight:800; margin-bottom:6px">기부금 100% 전달</div>
             <p>수수료는 플랫폼이 부담합니다.</p>
           </div>
         </div>
-        <div class="stats">
+        <div class="card stats">
           <h3>📊 지금까지의 연결</h3>
-          <strong>🐾 Beta 서비스 중</strong>
-          <p class="note">아직은 시작 단계지만,<br/>곧 지표가 쌓여갑니다.</p>
+          <strong>Beta 서비스 중</strong>
+          <p class="note">지표는 쌓이는 중입니다.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Projects -->
+  <!-- Projects (원본 로직/ID 유지) -->
   <section class="projects">
     <div class="container">
       <h2>진행 중인 프로젝트</h2>
@@ -144,22 +184,23 @@
 
   <!-- Closing -->
   <section class="closing">
-    <div class="container">
-      <div class="closing-layout">
-        <div>
-          <strong>Project.PAW는<br/>‘개인 ↔ 개인 후원’을 위한<br/>새로운 플랫폼입니다.</strong>
-        </div>
-        <div class="example-box">
-          예: 한 구조자가 다친 고양이를 병원에 데려갔습니다.<br/>
-          치료비는 벅찼지만, Project.PAW에서 후원자와 바로 연결.<br/>
-          책임은 줄고, 고양이는 치료를 받을 수 있었습니다.
-        </div>
+    <div class="container closing-grid">
+      <div>
+        <strong>Project.PAW — ‘개인 ↔ 개인 후원’을 위한 새로운 기본값.</strong>
+        <p>단체를 거치지 않고, 바로 이어집니다.</p>
+      </div>
+      <div class="card example">
+        <p><b>예시</b> · 한 구조자가 다친 고양이를 병원에 데려갔습니다.<br/>
+        치료비는 벅찼지만, Project.PAW에서 후원자와 바로 연결.<br/>
+        책임은 나누고, 치료는 이어졌습니다.</p>
       </div>
     </div>
   </section>
 
+  <!-- footer include 유지 -->
   <div data-include="footer"></div>
 
+  <!-- 원본 스크립트(백엔드 연동/화면간 연동) 그대로 유지 -->
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
@@ -170,4 +211,35 @@
     const fmt = n => Number(n||0).toLocaleString('ko-KR');
 
     const cover = (p) =>
-      p.representativeIma
+      p.representativeImageUrl ||
+      p.coverUrl ||
+      (Array.isArray(p.galleryUrls) && p.galleryUrls[0]) ||
+      (Array.isArray(p.images) && p.images[0]) ||
+      p.image || p.thumbnailUrl ||
+      'img/placeholder.svg';
+
+    async function render(){
+      try {
+        const list = await apiListProjects({ status:'approved', limit:12 });
+        if(!list.length){
+          $grid.innerHTML = '<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
+          return;
+        }
+        $grid.innerHTML = list.map(p => `
+          <a class="card project" href="project.html?id=${encodeURIComponent(p.id)}">
+            <img src="${cover(p)}" alt=""/>
+            <h3>${p.name ?? '(이름 없음)'}</h3>
+            <div class="muted">${p.summary ?? ''}</div>
+            <div class="muted">목표 ${fmt(p.goalAmount)} · 부담 ${fmt(p.rescuerContribution)}</div>
+          </a>
+        `).join('');
+      } catch (e) {
+        console.error(e);
+        $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
+      }
+    }
+
+    render();
+  </script>
+</body>
+</html>
